--- a/src/main/webapp/resources/css/template/main.css
+++ b/src/main/webapp/resources/css/template/main.css
@@ -271,7 +271,15 @@ box-shadow:         0px 0px 10px 0px rgba(24, 33, 54, 0.49);
 
 }
 
-
+.bSamochod_napis{
+    font-size:60px;
+    position:absolute;
+    margin-top:-120px;
+    margin-left: 50px;
+    display:none;
+    font-family: "BABAS";
+    pointer-events:none;
+}
 
 
 
